service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-enemy-bo
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      
  selector:
    app : public-enemy-bo
