ingress.yaml

apiVersion: extensions/v1beta1

kind: Ingress
metadata:
  name: public-enemy-bo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - public-enemy-bo.dev.insee.io
  rules:
    
    - host: public-enemy-bo.dev.insee.io
      http:
        paths:
         
          - path: /
            backend:
              serviceName: public-enemy-bo
              servicePort: http
